--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* outline: 1px solid red; */
 }
 
 body{
@@ -179,22 +180,23 @@ header{
 .project-section{
     text-align: center;
     background-color: rgb(16,25,39);
-    height: 80vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    max-width: 100%;
 }
 
 .project-section .container{
     max-width: 1400px;
     margin: 0 auto;/*to center the cards*/
+    max-width: 100%;
     width: 90%;
 }
 
 .project-grid{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
     align-items: center;
     width: 100%;    
     gap: 2rem;
@@ -229,7 +231,7 @@ header{
     font-family: "Playfair Display", serif;
     font-size: 3.5rem;
     color: #fff;
-    padding: 5rem;
+    padding: 2rem;
     text-transform: uppercase;
 }
 
@@ -242,55 +244,233 @@ header{
 }
 
 
-/* Skills Section */
+/* Skills and Contact Section */
 
-/* .skill-section{
-    height: 80vh;
+
+.multi-section{
     display: flex;
-    width: 100%;
     justify-content: space-between;
     align-items: center;
+    /* min-height: 100vh;
+    max-width: 100%; */
+    /* background: linear-gradient(#df0e0e, #999999); */
+    width: 100%;
+    background: linear-gradient(90deg, #a1c4fd, #c2e9fb);
+}
+
+.skill-section{
+    height: 100vh;
+    width: 50%;
     text-align: right;
-    border: 2px solid red;
 }
 
 .skill-section .container{
-    max-width: 1000px;
-    width: 90%;
-    border: 2px solid red;
+    width: 100%;
+    height: 100%;
+    max-width: 1400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .skill-title{
+    font-family: "Oswald", serif;
+    padding: 2rem;
     font-size: 2.5rem;
-    padding: .5rem;
+    max-width: 68%;
 }
 
 .skill-card{
-    position: relative;
     background-color: rgb(128, 128, 128);
-    width: 40%;
-    transition: transform 0.3s ease;
+    width: 60%;
+    border-radius: 0 5px 5px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* box-shadow: 3px 3px 13px rgba(0, 0, 0, 0.2); */
+    box-shadow: 0px 0px 10px rgba(0, 237, 237, 0.1);
+    transition: transform 0.3s ease, width 0.3s ease, box-shadow 0.3s ease;
 }
 
-.skill-card::before{
-    content: " ";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform-origin: left;
-    transform: scaleX(0);
-    background-color: rgb(80, 80, 80);
-    transition: transform 0.3s ease;
+.gradient-py .subheading{
+    background: linear-gradient(90deg, #3776AB, #FFD43B);
+    color: #FFFFFF;
 }
 
-.skill-card:hover::before{
-    transform: scaleX(1);
+.gradient-py .subheading i{
+    color: #FFD43B;
+}
+
+
+.gradient-java .subheading{
+    background: linear-gradient(90deg,rgb(255, 68, 0),rgb(255, 166, 0));
+    color: #FFFFFF;
+}
+
+.gradient-java .subheading i{
+    color: rgb(239, 69, 6); /* Java Orange */
+}
+
+.gradient-js .subheading{
+    background: linear-gradient(90deg, #f7df1e, #323330);
+    color: #ffffff;
+}
+
+.gradient-js .subheading i{
+    color: #f5f5f5;;
+}
+
+.gradient-html .subheading{
+    background: linear-gradient(90deg, #e44d26, #f16529);
+    color: #ffffff;
+}
+
+.gradient-html .subheading i{
+    color: #d33109; /* HTML Red */
+}
+
+
+.gradient-css .subheading{
+    background: linear-gradient(90deg, #264de4, #2965f1);
+    color: #ffffff;
+}
+
+.gradient-css .subheading i{
+    color: #04239d; /* CSS Blue */
+}
+
+.skill-card:hover{
+    width: 70%;
+    /* box-shadow: 5px 5px 15px; */
+    box-shadow: 0px 0px 15px rgba(9, 2, 149, 0.5);
+    border-right: 5px solid #39393d; /* Highlight effect */
+
 }
 
 .skill-card .subheading{
-    font-size: 3rem;
+    font-size: 2.5rem;
     padding: 1.5rem;
+}
+
+
+.contact-section{
+    display: flex;
+    width: 70%;
+    display: flex;
+    text-align: center;
+}
+.contact-section .container{
+    width: 100%;
+    max-width: 1400px;
+}
+
+.contact-pallet{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    place-items: center;
+    gap: 20px;
+}
+
+.contact-box{
     position: relative;
-} */
+    bottom: 8rem;
+    background-color: #f9efef;
+    padding:50px;
+    width: 80%;
+    transition: box-shadow 0.3s ease;
+}
+
+.contact-box:hover{
+    box-shadow: 5px  5px 15px  rgba(0, 0, 0, 0.1);
+}
+
+.contact-header{
+    background-color: rgb(67, 67, 237);
+    padding: 10rem;
+    font-size: 3rem;
+    text-align: center;
+    font-family: "Oswald", serif;
+    color: #fff;
+    margin-top: 4rem;
+}
+
+.contact-box i{
+    font-size: 3rem;
+    padding: 1rem;
+    color: #002cda;
+}
+
+.contact-box h2{
+    text-align: center;
+    padding: 20px;
+}
+
+.contact-box p{
+    padding: 1.5rem;
+    font-size: 1.1rem;
+}
+
+.contact-box hr{
+    background-color: rgb(87, 87, 244);
+    height: 2px;
+    max-width: 50%;
+    border: none;
+    margin: 0 auto;
+}
+
+/* Footer Section */
+
+footer{
+    height: 50vh;
+    background-color: #000;
+    display: flex;
+    color: #ffffff;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+footer h1{
+    font-family: "Oswald", serif;
+    font-size: 4rem;
+    font-weight: 400;
+}
+
+footer h2{
+    font-family: "Playfair Display", serif;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    padding: .5rem;
+    line-gap-override: 2px;
+}
+
+footer span{
+    color:#679d04;
+}
+
+.social-link{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1rem;
+}
+
+.social-link i{
+    font-size: 2.5rem;
+    color: rgb(71, 192, 30);
+    transition: all 0.3s;
+}
+
+.text{
+    text-align: center;
+    padding: 1.1rem;
+}
+
+.social-link i:hover{
+    transform: scale(1.2);
+}
+
+.social-link i:active{
+    transform: scale(0.97);
+}
