--- a/small.css
+++ b/small.css
@@ -8,7 +8,7 @@
 
     .navlinks{
         display: none;
-        background-color: #b3dad0;
+        background-color:rgb(24, 33, 48);
         flex-direction: column;
         position: absolute;
         top: 50px;
@@ -17,6 +17,10 @@
         padding: 75px 0;
         justify-content: right;
         height: 100vh;
+    }
+
+    .nav-toggle div{
+        background-color: #fff;
     }
 
     .navlinks.active{
