--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body{
 /* Navigation Bar */
 
 header{
-    background-color: #b3dad0;
+    /* background-color: #b3dad0; */
+    background-color:rgb(24, 33, 48);
     padding: 15px 20px;
     position: fixed;
     width: 100%;
@@ -32,7 +33,7 @@ header{
 
 .nav-logo{
     font-family: "Playfair Display", serif;
-    color: #000;
+    color: #fff;
     font-size: 3.5rem;
     font-weight: 400;
     text-decoration: none;
@@ -55,7 +56,7 @@ header{
     display: flex; 
     font-size: 1rem;
     text-decoration: none;
-    color: #000;
+    color: #fff;
     will-change: transform; /*will nedd for underline on active nav-link*/
     transition: transform 0.3s ease, color 0.3s ease;
 }
