--- a/small.css
+++ b/small.css
@@ -8,7 +8,7 @@
 
     .navlinks{
         display: none;
-        background-color:rgb(24, 33, 48);
+        background-color: #333333;
         flex-direction: column;
         position: absolute;
         top: 50px;
