--- a/style.css
+++ b/style.css
@@ -297,12 +297,11 @@ header{
     font-family: "Bona Nova", serif;
     background-color: rgb(128, 128, 128);
     width: 60%;
-    border-radius: 0 5px 5px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     /* box-shadow: 3px 3px 13px rgba(0, 0, 0, 0.2); */
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.05);
     transition: transform 0.3s ease, width 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -355,8 +354,8 @@ header{
 .skill-card:hover{
     width: 70%;
     /* box-shadow: 5px 5px 15px; */
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
-    border-right: 5px solid #39393d; /* Highlight effect */
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.05);
+    border-right: 5px solid #2c2ce8; /* Highlight effect */
 }
 
 .skill-card:active{
