--- a/style.css
+++ b/style.css
@@ -693,12 +693,31 @@ img{
 }
 
 .contact-form{
-  background-color: #27262a;
+  background-color: #1a191c;
   height: 480px;
   width: 400px;
   padding: 2em;
   border-radius: 10px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+}
+
+.contact-form::after, .contact-form::before{
+  content: '';
+  background: conic-gradient(rgb(0, 255, 234), rgb(0, 255, 200));
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  padding: 5px;
+  z-index: -1;
+}
+
+.contact-form::before{
+  filter: blur(1.5em);
+  opacity: 0.2;
 }
 
 .form{
