--- a/style.css
+++ b/style.css
@@ -52,12 +52,23 @@ body {
   width: 100%;
   height: 100%;
   min-height: 100dvh;
-  max-width: 1600px;
   margin: 0 auto;
   font-family: "Poppins", sans-serif;
   color: #fff;
   scroll-behavior: smooth;
   background-color: var(--base-clr);
+}
+
+/* @media (min-width: 1600px) {
+  body {
+    max-width: 1600px;
+  }
+} */
+
+@media (min-width: 1024px) {
+  body {
+    max-width: 1600px;
+  }
 }
 
 aside::-webkit-scrollbar {
@@ -93,7 +104,7 @@ svg {
 } */
  
 .grid-cont {
-  height: 100vh;
+  height: 100dvh;
   width: 100%;
   display: grid;
   grid-template-columns: 1fr;
@@ -102,6 +113,10 @@ svg {
     "navbar"
     "mainarea"
     "footer";
+}
+
+main{
+  width: 100%;
 }
 
 /*=========SIDEBAR========*/
